# hasanyonetaken

./: LICENSE  README.md  pyproject.toml
hasanyonetaken/: manage.py
hasanyonetaken/hasanyonetaken/: asgi.py  settings.py  urls.py  wsgi.py
hasanyonetaken/professor/: admin.py  home.html  models.py  views.py
hasanyonetaken/professor/management/commands/: scrape_professor_detail.py  scrape_rate_my_professor.py
hasanyonetaken/professor/migrations/: 0001_initial.py  0002_professor_rmp_url_alter_review_difficulty_and_more.py  0003_alter_professor_courses_alter_professor_ratings_and_more.py  0004_alter_review_attendance_mandatory_and_more.py
hasanyonetaken/professor/templates/: detail.html  home.html
hasanyonetaken/templates/: base.html
